--- a/frontend/server/index.html
+++ b/frontend/server/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="/manifest.json">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900&subset=cyrillic,cyrillic-ext" rel="stylesheet">
   <meta charSet='utf-8' />
   <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
   <meta httpEquiv='x-ua-compatible' content='ie=edge' />
