file structure refactor

--- a/frontend/server/index.html
+++ b/frontend/server/index.html
@@ -12,6 +12,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
   <meta httpEquiv='x-ua-compatible' content='ie=edge' />
   <%= finalStylesheets %>
+  <%= finalInlineStyles %>
   </head>
 <body>
   <div id="app"><%= serverRender %></div>
